@@ -38,49 +38,49 @@ import org.apache.hadoop.io.Text;
  * Object get parsed at its initialize time when call
  * {@link #init(BytesRefArrayWritable cols)}, while LazyStruct parse fields in a
  * lazy way.
- * 
+ *
  */
 public class ColumnarStruct {
-
-  /**
-   * The fields of the struct.
-   */
-  LazyObject[] fields;
 
   private static final Log LOG = LogFactory.getLog(ColumnarStruct.class);
 
   int[] prjColIDs = null; // list of projected column IDs
 
+  Text nullSequence;
+  int lengthNullSequence;
+
   /**
    * Construct a ColumnarStruct object with the TypeInfo. It creates the first
    * level object at the first place
-   * 
+   *
    * @param oi
    *          the ObjectInspector representing the type of this LazyStruct.
    */
   public ColumnarStruct(ObjectInspector oi) {
-    this(oi, null);
+    this(oi, null, null);
   }
 
   /**
    * Construct a ColumnarStruct object with the TypeInfo. It creates the first
    * level object at the first place
-   * 
+   *
    * @param oi
    *          the ObjectInspector representing the type of this LazyStruct.
    * @param notSkippedColumnIDs
    *          the column ids that should not be skipped
    */
   public ColumnarStruct(ObjectInspector oi,
-      ArrayList<Integer> notSkippedColumnIDs) {
+      ArrayList<Integer> notSkippedColumnIDs, Text nullSequence) {
     List<? extends StructField> fieldRefs = ((StructObjectInspector) oi)
         .getAllStructFieldRefs();
     int num = fieldRefs.size();
-    fields = new LazyObject[num];
-    cachedByteArrayRef = new ByteArrayRef[num];
-    rawBytesField = new BytesRefWritable[num];
-    fieldSkipped = new boolean[num];
-    inited = new boolean[num];
+
+    fieldInfoList = new FieldInfo[num];
+
+    if (nullSequence != null) {
+      this.nullSequence = nullSequence;
+      this.lengthNullSequence = nullSequence.getLength();
+    }
 
     // if no columns is set to be skipped, add all columns in
     // 'notSkippedColumnIDs'
@@ -91,15 +91,10 @@ public class ColumnarStruct {
     }
 
     for (int i = 0; i < num; i++) {
-      fields[i] = LazyFactory.createLazyObject(fieldRefs.get(i)
-          .getFieldObjectInspector());
-      cachedByteArrayRef[i] = new ByteArrayRef();
-      if (!notSkippedColumnIDs.contains(i)) {
-        fieldSkipped[i] = true;
-        inited[i] = true;
-      } else {
-        inited[i] = false;
-      }
+      fieldInfoList[i] = new FieldInfo(
+          LazyFactory.createLazyObject(fieldRefs.get(i)
+          .getFieldObjectInspector()),
+          !notSkippedColumnIDs.contains(i));
     }
 
     // maintain a list of non-NULL column IDs
@@ -117,72 +112,109 @@ public class ColumnarStruct {
 
   /**
    * Get one field out of the struct.
-   * 
+   *
    * If the field is a primitive field, return the actual object. Otherwise
    * return the LazyObject. This is because PrimitiveObjectInspector does not
    * have control over the object used by the user - the user simply directly
    * use the Object instead of going through Object
    * PrimitiveObjectInspector.get(Object).
-   * 
+   *
    * NOTE: separator and nullSequence has to be the same each time this method
    * is called. These two parameters are used only once to parse each record.
-   * 
+   *
    * @param fieldID
    *          The field ID
    * @param nullSequence
    *          The sequence for null value
    * @return The field as a LazyObject
    */
-  public Object getField(int fieldID, Text nullSequence) {
-    return uncheckedGetField(fieldID, nullSequence);
+  public Object getField(int fieldID) {
+    return fieldInfoList[fieldID].uncheckedGetField();
   }
 
-  /*
-   * use an array instead of only one object in case in future hive does not do
-   * the byte copy.
-   */
-  ByteArrayRef[] cachedByteArrayRef = null;
-  BytesRefWritable[] rawBytesField = null;
-  boolean[] inited = null;
-  boolean[] fieldSkipped = null;
+  class FieldInfo {
+    LazyObject field;
+    /*
+     * use an array instead of only one object in case in future hive does not do
+     * the byte copy.
+     */
+    ByteArrayRef cachedByteArrayRef;
+    BytesRefWritable rawBytesField;
+    boolean inited;
+    boolean fieldSkipped;
 
-  /**
-   * Get the field out of the row without checking parsed. This is called by
-   * both getField and getFieldsAsList.
-   * 
-   * @param fieldID
-   *          The id of the field starting from 0.
-   * @param nullSequence
-   *          The sequence representing NULL value.
-   * @return The value of the field
-   */
-  protected Object uncheckedGetField(int fieldID, Text nullSequence) {
-    if (fieldSkipped[fieldID]) {
-      return null;
-    }
-    if (!inited[fieldID]) {
-      BytesRefWritable passedInField = rawBytesField[fieldID];
-      try {
-        cachedByteArrayRef[fieldID].setData(passedInField.getData());
-      } catch (IOException e) {
-        throw new RuntimeException(e);
+    public FieldInfo(LazyObject lazyObject, boolean fieldSkipped) {
+      field = lazyObject;
+      cachedByteArrayRef = new ByteArrayRef();
+      if (fieldSkipped) {
+        this.fieldSkipped = true;
+        inited = true;
+      } else {
+        inited = false;
       }
-      fields[fieldID].init(cachedByteArrayRef[fieldID], passedInField
-          .getStart(), passedInField.getLength());
-      inited[fieldID] = true;
     }
 
-    byte[] data = cachedByteArrayRef[fieldID].getData();
-    int fieldLen = rawBytesField[fieldID].length;
-
-    if (fieldLen == nullSequence.getLength()
-        && LazyUtils.compare(data, rawBytesField[fieldID].getStart(), fieldLen,
-        nullSequence.getBytes(), 0, nullSequence.getLength()) == 0) {
-      return null;
+    /*
+     * ============================ [PERF] ===================================
+     * This function is called for every row. Setting up the selected/projected
+     * columns at the first call, and don't do that for the following calls.
+     * Ideally this should be done in the constructor where we don't need to
+     * branch in the function for each row.
+     * =========================================================================
+     */
+    public void init(BytesRefWritable col) {
+        if (col != null) {
+          rawBytesField= col;
+          inited = false;
+        } else {
+          // select columns that actually do not exist in the file.
+          fieldSkipped = true;
+        }
     }
 
-    return fields[fieldID].getObject();
+    /**
+     * Get the field out of the row without checking parsed. This is called by
+     * both getField and getFieldsAsList.
+     *
+     * @param fieldID
+     *          The id of the field starting from 0.
+     * @param nullSequence
+     *          The sequence representing NULL value.
+     * @return The value of the field
+     */
+    protected Object uncheckedGetField() {
+      if (fieldSkipped) {
+        return null;
+      }
+      if (!inited) {
+        try {
+          cachedByteArrayRef.setData(rawBytesField.getData());
+        } catch (IOException e) {
+          throw new RuntimeException(e);
+        }
+        field.init(cachedByteArrayRef, rawBytesField
+            .getStart(), rawBytesField.getLength());
+        inited = true;
+      }
+
+
+      int fieldLen = rawBytesField.length;
+      if (fieldLen == lengthNullSequence) {
+        byte[] data = cachedByteArrayRef.getData();
+
+        if (LazyUtils.compare(data, rawBytesField.getStart(), fieldLen,
+            nullSequence.getBytes(), 0, lengthNullSequence) == 0) {
+          return null;
+        }
+      }
+
+      return field.getObject();
+
+    }
   }
+
+  FieldInfo[] fieldInfoList = null;
+
 
   /*
    * ============================ [PERF] ===================================
@@ -196,11 +228,10 @@ public class ColumnarStruct {
     for (int i = 0; i < prjColIDs.length; ++i) {
       int fieldIndex = prjColIDs[i];
       if (fieldIndex < cols.size()) {
-        rawBytesField[fieldIndex] = cols.unCheckedGet(fieldIndex);
-        inited[fieldIndex] = false;
+        fieldInfoList[fieldIndex].init(cols.unCheckedGet(fieldIndex));
       } else {
         // select columns that actually do not exist in the file.
-        fieldSkipped[fieldIndex] = true;
+        fieldInfoList[fieldIndex].init(null);
       }
     }
   }
@@ -209,19 +240,19 @@ public class ColumnarStruct {
 
   /**
    * Get the values of the fields as an ArrayList.
-   * 
+   *
    * @param nullSequence
    *          The sequence for the NULL value
    * @return The values of the fields as an ArrayList.
    */
-  public ArrayList<Object> getFieldsAsList(Text nullSequence) {
+  public ArrayList<Object> getFieldsAsList() {
     if (cachedList == null) {
       cachedList = new ArrayList<Object>();
     } else {
       cachedList.clear();
     }
-    for (int i = 0; i < fields.length; i++) {
-      cachedList.add(uncheckedGetField(i, nullSequence));
+    for (int i = 0; i < fieldInfoList.length; i++) {
+      cachedList.add(fieldInfoList[i].uncheckedGetField());
     }
     return cachedList;
   }
